--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -1,7 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container">
-        <h1>Water CYS ...</h1>
+    <div class="jumbotron" style="margin-top: -16px">
+        <h1 class="display-3">WaterCYS</h1>
+        <p class="lead">
+            This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.
+        </p>
+        <hr class="my-4">
+        <p>
+            It uses utility classes for typography and spacing to space content out within the larger container.
+        </p>
+        <p class="lead">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </p>
     </div>
 {% endblock %}
