--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="jumbotron" style="margin-top: -16px">
+    <div class="jumbotron" style="margin: -16px 0">
         <h1 class="display-3">WaterCYS</h1>
         <p class="lead">
             This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.
