--- a/templates/front/contact.html.twig
+++ b/templates/front/contact.html.twig
@@ -1,7 +1,71 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container">
-        <h2>{% trans %}navbar.contact{% endtrans %}</h2>
-    </div>
+<div class="container">
+	<div class="row">
+		<div class="col-12 col-md-6">
+			<form id="frmContacto" name="frmContacto" action="inc/procesa-cotizacion.php" method="post">
+				<fieldset>
+					<div class="form-group">
+						<label>Tipo:</label>
+						<select class="form-control" name="tipo" id="tipo">
+							<option value="" selected="selected">-- Seleccione --</option>
+							<option value="Cotización Potabilización">Cotización Potabilización</option>
+							<option value="Cotización Aguas Servidas">Cotización Aguas Servidas</option>
+							<option value="Cotización Riles">Cotización Riles</option>
+							<option value="Cotización Olores">Cotización Olores</option>
+							<option value="Cotización Alcantarillado por Vacío">Cotización Alcantarillado por Vacío</option>
+							<option value="Cotización Biogas">Cotización Biogas</option>
+							<option value="Otros">Otros</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label>Producto / Servicio:</label>
+						<input class="form-control" name="producto" type="text" id="producto" value="">
+					</div>
+					<div class="form-group">
+						<label>Empresa:</label>
+						<input class="form-control" name="empresa" type="text" id="empresa">
+					</div>
+					<div class="form-group">
+						<label>Nombre Contacto :</label>
+						<input class="form-control" name="nombre" type="text" id="nombre">
+					</div>
+					<div class="form-group">
+						<label>Email :</label>
+						<input class="form-control" name="email" type="text" id="email">
+					</div>
+					<div class="form-group">
+						<label>Teléfono :</label>
+						<input class="form-control" name="telefono" type="text" id="telefono">
+					</div>
+					<div class="form-group">
+						<label>Dirección :</label>
+						<input class="form-control" name="direccion" type="text" id="direccion">
+					</div>
+					<div class="form-group">
+						<label>Ciudad :</label>
+						<input class="form-control" name="ciudad" type="text" id="ciudad">
+					</div>
+					<div class="form-group">
+						<label>Comentarios :</label>
+						<textarea class="form-control" name="comentarios" rows="3" id="comentarios"></textarea>
+					</div>
+					<br>
+					<div class="clear"></div>
+					<div class="clear"></div>
+					<div class="form-btn">
+						<input class="btn btn-primary" type="button" id="validar-cotizacion" name="button" value="Enviar">
+					</div>
+					<br>
+					<br>
+				</fieldset>
+			</form>
+		</div>
+		<div class="col-md-6 d-none d-md-block" >
+			<h1>PEPE</h1>
+		</div>
+	</div>
+</div>
 {% endblock %}
+
