--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -3,7 +3,7 @@
         <a href="/" class="navbar-brand">WaterCYS</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
-            <span class="navbar-toggle-icon"></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="mobile-nav">
@@ -24,12 +24,8 @@
                     <a href="/vision" class="nav-link">{% trans %}navbar.vision{% endtrans %}</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/products" class="nav-link">{% trans %}navbar.products{% endtrans %}</a>
+                    <a href="/products" class="nav-link">{% trans %}navbar.products{% endtrans %} - {% trans %}navbar.services{% endtrans %}</a>
                 </li>
-                <li class="nav-item">
-                    <a href="/services" class="nav-link">{% trans %}navbar.services{% endtrans %}</a>
-                </li>
-                
             </ul>
         </div>
     </div>
