merch all about mision-vision and porduct-services, set text in mision-vision

--- a/templates/front/contact.html.twig
+++ b/templates/front/contact.html.twig
@@ -63,7 +63,7 @@
 			</form>
 		</div>
 		<div class="col-md-6 d-none d-md-block" >
-			<h1>PEPE</h1>
+			<h1>¿Qué se necesita para contactarnos?</h1>
 		</div>
 	</div>
 </div>
