--- a/templates/front/products.html.twig
+++ b/templates/front/products.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="container">
-	<h2>{% trans %}navbar.products{% endtrans %}</h2>
+	<h2>{% trans %}navbar.products{% endtrans %} - {% trans %}navbar.services{% endtrans %}</h2>
 	<!-- Card deck -->
 	<div class="card-deck">
 
