--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -18,10 +18,7 @@
                     <a href="/contact" class="nav-link">{% trans %}navbar.contact{% endtrans %}</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/mision" class="nav-link">{% trans %}navbar.mision{% endtrans %}</a>
-                </li>
-                <li class="nav-item">
-                    <a href="/vision" class="nav-link">{% trans %}navbar.vision{% endtrans %}</a>
+                    <a href="/mision" class="nav-link">{% trans %}navbar.mision{% endtrans %} - {% trans %}navbar.vision{% endtrans %}</a>
                 </li>
                 <li class="nav-item">
                     <a href="/products" class="nav-link">{% trans %}navbar.products{% endtrans %} - {% trans %}navbar.services{% endtrans %}</a>
