--- a/templates/inc/footer.html.twig
+++ b/templates/inc/footer.html.twig
@@ -84,9 +84,9 @@
       <div class="col-md-7 col-lg-8">
 
         <!--Copyright-->
-        <p class="text-center text-md-left">© 2018 Copyright:
+        <p class="text-center text-md-left">© 2019 Copyright:
           <a href="https://mdbootstrap.com/education/bootstrap/">
-            <strong> MDBootstrap.com</strong>
+            <strong> SmartBusines</strong>
           </a>
         </p>
 
