--- a/templates/front/mision.html.twig
+++ b/templates/front/mision.html.twig
@@ -14,8 +14,8 @@
 			<h4>{% trans %}mision-vision.vision{% endtrans %}</h4>	
 		</div>
 		<div class="col-12">
-			<h2>{% trans %}navbar.valors{% endtrans %}</h2>
-			<h4>{% trans %}mision-vision.valors{% endtrans %}</h4>	
+			<h2>{% trans %}navbar.values{% endtrans %}</h2>
+			<h4>{% trans %}mision-vision.values{% endtrans %}</h4>	
 		</div>
 	</div>
 </div>
