--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="jumbotron" style="margin: -16px 0">
-        <h1 class="display-3">WaterCYS</h1>
+        <h1 class="display-3">{% trans %}company-name{% endtrans %}</h1>
         <p class="lead">
             This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.
         </p>
