--- a/templates/inc/footer.html.twig
+++ b/templates/inc/footer.html.twig
@@ -9,16 +9,14 @@
 
       <!-- Grid column -->
       <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-        <h6 class="text-uppercase mb-4 font-weight-bold">Company name</h6>
-        <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-          consectetur
-          adipisicing elit.</p>
+        <h6 class="text-uppercase mb-4 font-weight-bold">{% trans %}company-name{% endtrans %}</h6>
+        <p>{% trans %}mision-vision.mision{% endtrans %}</p>
       </div>
       <!-- Grid column -->
 
       <hr class="w-100 clearfix d-md-none">
 
-      <!-- Grid column -->
+      <!-- Grid column 
       <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
         <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
         <p>
@@ -34,24 +32,27 @@
           <a href="#!">Bootstrap Angular</a>
         </p>
       </div>
-      <!-- Grid column -->
-
+      Grid column -->
+      <!--
       <hr class="w-100 clearfix d-md-none">
-
+      -->
       <!-- Grid column -->
       <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
         <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
         <p>
-          <a href="#!">Your Account</a>
+          <a href="/">{% trans %}navbar.home{% endtrans %}</a>
         </p>
         <p>
-          <a href="#!">Become an Affiliate</a>
+          <a href="/references">{% trans %}navbar.references{% endtrans %}</a>
         </p>
         <p>
-          <a href="#!">Shipping Rates</a>
+          <a href="/contact">{% trans %}navbar.contact{% endtrans %}</a>
         </p>
         <p>
-          <a href="#!">Help</a>
+          <a href="/mision">{% trans %}navbar.mision{% endtrans %} - {% trans %}navbar.vision{% endtrans %}</a>
+        </p>
+        <p>
+          <a href="/products">{% trans %}navbar.products{% endtrans %} - {% trans %}navbar.services{% endtrans %}</a>
         </p>
       </div>
 
@@ -59,16 +60,14 @@
       <hr class="w-100 clearfix d-md-none">
 
       <!-- Grid column -->
-      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+      <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mt-3">
         <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
         <p>
-          <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+          <i class="fa fa-home mr-3"></i> Santiago, AVE. L.B.O'HIGGINS 1302, OF 70</p>
         <p>
-          <i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
+          <i class="fa fa-envelope mr-3"></i><a href="/contact">jvillagran@watercys.cl</a></p>
         <p>
-          <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-        <p>
-          <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+          <i class="fa fa-phone mr-3"></i><a href="https://api.whatsapp.com/send?phone=56962796984">+ 56 9 62796984</a></p>
       </div>
       <!-- Grid column -->
 
@@ -84,9 +83,9 @@
       <div class="col-md-7 col-lg-8">
 
         <!--Copyright-->
-        <p class="text-center text-md-left">© 2019 Copyright:
+        <p class="text-center text-md-left">© {{ date() | date("Y") }} Copyright:
           <a href="https://mdbootstrap.com/education/bootstrap/">
-            <strong> SmartBusines</strong>
+            <strong> SmartBusiness</strong>
           </a>
         </p>
 
@@ -101,22 +100,22 @@
           <ul class="list-unstyled list-inline">
             <li class="list-inline-item">
               <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                <i class="fab fa-facebook-f"></i>
+                <i class="fa fa-facebook-f"></i>
               </a>
             </li>
             <li class="list-inline-item">
               <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                <i class="fab fa-twitter"></i>
+                <i class="fa fa-twitter"></i>
               </a>
             </li>
             <li class="list-inline-item">
               <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                <i class="fab fa-google-plus-g"></i>
+                <i class="fa fa-google-plus"></i>
               </a>
             </li>
             <li class="list-inline-item">
               <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                <i class="fab fa-linkedin-in"></i>
+                <i class="fa fa-linkedin"></i>
               </a>
             </li>
           </ul>
@@ -133,3 +132,4 @@
 
 </footer>
 <!-- Footer -->
+
