fix last commit(addres to address)

--- a/templates/front/contact.html.twig
+++ b/templates/front/contact.html.twig
@@ -34,7 +34,7 @@
 						<input class="form-control" name="telefono" type="text" id="telefono">
 					</div>
 					<div class="form-group">
-						<label>{% trans %}addres{% endtrans %} :</label>
+						<label>{% trans %}address{% endtrans %} :</label>
 						<input class="form-control" name="direccion" type="text" id="direccion">
 					</div>
 					<div class="form-group">
