--- a/templates/front/references.html.twig
+++ b/templates/front/references.html.twig
@@ -3,123 +3,251 @@
 {% block body %}
 <div class="box">
 	<div class="container">
-		<div class="row">
-			
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-				
-				<div class="box-part text-center">
-					
-					<i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
-					
-					<div class="title">
-						<h4>Instagram</h4>
-					</div>
-					
-					<div class="text">
-						<span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-					</div>
-					
-					<a href="#">Learn More</a>
-					
+		<div class="card-deck">
+
+			<!-- Card -->
+			<div class="card mb-4">
+
+				<!--Card image-->
+				<div class="view overlay">
+					<img class="card-img-top" src="/img/CALA2.png" alt="Card image cap">
+					<a href="https://www.cala-sa.cl">
+						<div class="mask rgba-white-slight"></div>
+					</a>
 				</div>
-			</div>	 
-			
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-				
-				<div class="box-part text-center">
-					
-					<i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
-					
-					<div class="title">
-						<h4>Twitter</h4>
-					</div>
-					
-					<div class="text">
-						<span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-					</div>
-					
-					<a href="#">Learn More</a>
-					
+
+				<!--Card content-->
+				<div class="card-body">
+
+					<!--Title-->
+					<h4 class="card-title">{% trans %}references.cala-name{% endtrans %}</h4>
+					<!--Text-->
+					<p class="card-text">{% trans %}references.cala-sumary{% endtrans %}</p>
+					<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+					<!--<button type="button" class="btn btn-primary btn-md" href="https://www.cala-sa.cl">{% trans %}references.button-more{% endtrans %}</button>-->
+
 				</div>
-			</div>	 
-			
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-				
-				<div class="box-part text-center">
-					
-					<i class="fa fa-facebook fa-3x" aria-hidden="true"></i>
-					
-					<div class="title">
-						<h4>Facebook</h4>
-					</div>
-					
-					<div class="text">
-						<span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-					</div>
-					
-					<a href="#">Learn More</a>
-					
-				</div>
-			</div>	 
-			
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-				
-				<div class="box-part text-center">
-					
-					<i class="fa fa-pinterest-p fa-3x" aria-hidden="true"></i>
-					
-					<div class="title">
-						<h4>Pinterest</h4>
-					</div>
-					
-					<div class="text">
-						<span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-					</div>
-					
-					<a href="#">Learn More</a>
-					
-				</div>
-			</div>	 
-			
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-				
-				<div class="box-part text-center">
-					
-					<i class="fa fa-google-plus fa-3x" aria-hidden="true"></i>
-					
-					<div class="title">
-						<h4>Google</h4>
-					</div>
-					
-					<div class="text">
-						<span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-					</div>
-					
-					<a href="#">Learn More</a>
-					
-				</div>
-			</div>	 
-			
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-				
-				<div class="box-part text-center">
-					
-					<i class="fa fa-github fa-3x" aria-hidden="true"></i>
-					
-					<div class="title">
-						<h4>Github</h4>
-					</div>
-					
-					<div class="text">
-						<span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-					</div>
-					
-					<a href="#">Learn More</a>
-					
-				</div>
+
 			</div>
-			
-		</div>		
+			<!-- Card -->
+
+			<!-- Card -->
+			<div class="card mb-4">
+				<!--Card image-->
+				<div class="view overlay">
+					<img class="card-img-top" src="/img/ESSBIO.png" alt="Card image cap">
+					<a href="#!">
+						<div class="mask rgba-white-slight"></div>
+					</a>
+				</div>
+
+				<!--Card content-->
+				<div class="card-body">
+
+					<!--Title-->
+					<h4 class="card-title">{% trans %}references.essbio-name{% endtrans %}</h4>
+					<!--Text-->
+					<p class="card-text">{% trans %}references.essbio-sumary{% endtrans %}</p>
+					<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+					<!--<button type="button" class="btn btn-primary btn-md">{% trans %}references.button-more{% endtrans %}</button>-->
+
+				</div>
+
+			</div>
+			<!-- Card -->
+
+			<!-- Card -->
+			<div class="card mb-4">
+
+				<!--Card image-->
+				<div class="view overlay">
+					<img class="card-img-top" src="/img/RESISTER.png" alt="Card image cap">
+					<a href="#!">
+						<div class="mask rgba-white-slight"></div>
+					</a>
+				</div>
+
+				<!--Card content-->
+				<div class="card-body">
+
+					<!--Title-->
+					<h4 class="card-title">{% trans %}references.resister-name{% endtrans %}</h4>
+					<!--Text-->
+					<p class="card-text">{% trans %}references.resister-sumary{% endtrans %}</p>
+					<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+					<!--<button type="button" class="btn btn-primary btn-md">{% trans %}references.button-more{% endtrans %}</button>-->
+
+				</div>
+
+			</div>
+			<!-- Card -->
+
+		</div>
+		<!-- Card deck -->
+		<div class="card-deck">
+
+			<!-- Card -->
+			<div class="card mb-4">
+
+				<!--Card image-->
+				<div class="view overlay">
+					<img class="card-img-top" src="/img/revesol.png" alt="Card image cap">
+					<a href="#!">
+						<div class="mask rgba-white-slight"></div>
+					</a>
+				</div>
+
+				<!--Card content-->
+				<div class="card-body">
+
+					<!--Title-->
+					<h4 class="card-title">{% trans %}references.revesol-name{% endtrans %}</h4>
+					<!--Text-->
+					<p class="card-text">{% trans %}references.revesol-sumary{% endtrans %}</p>
+					<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+					<!--<button type="button" class="btn btn-primary btn-md">{% trans %}references.button-more{% endtrans %}</button>-->
+
+				</div>
+
+			</div>
+			<!-- Card -->
+
+			<!-- Card -->
+			<div class="card mb-4">
+
+				<!--Card image-->
+				<div class="view overlay">
+					<img class="card-img-top" src="/img/VOLTA.png" alt="Card image cap">
+					<a href="#!">
+						<div class="mask rgba-white-slight"></div>
+					</a>
+				</div>
+
+				<!--Card content-->
+				<div class="card-body">
+
+					<!--Title-->
+					<h4 class="card-title">{% trans %}references.volta-name{% endtrans %}</h4>
+					<!--Text-->
+					<p class="card-text">{% trans %}references.volta-sumary{% endtrans %}</p>
+					<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+					<!--<button type="button" class="btn btn-primary btn-md">{% trans %}references.button-more{% endtrans %}</button>-->
+
+				</div>
+
+			</div>
+			<!-- Card -->
+
+			<!-- Card -->
+			<div class="card mb-4">
+
+				<!--Card image-->
+				<div class="view overlay">
+					<img class="card-img-top" src="/img/CHINA.png" alt="Card image cap">
+					<a href="#!">
+						<div class="mask rgba-white-slight"></div>
+					</a>
+				</div>
+
+				<!--Card content-->
+				<div class="card-body">
+
+					<!--Title-->
+					<h4 class="card-title">{% trans %}references.crtg-name{% endtrans %}</h4>
+					<!--Text-->
+					<p class="card-text">{% trans %}references.crtg-sumary{% endtrans %}</p>
+					<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+					<!--<button type="button" class="btn btn-primary btn-md">{% trans %}references.button-more{% endtrans %}</button>-->
+
+				</div>
+
+			</div>
+			<!-- Card -->
+
+		</div>
+		<!-- Card deck -->
+		<div class="card-deck">
+
+			<!-- Card -->
+			<div class="card mb-4">
+
+				<!--Card image-->
+				<div class="view overlay">
+					<img class="card-img-top" src="/img/LYA.png" alt="Card image cap">
+					<a href="#!">
+						<div class="mask rgba-white-slight"></div>
+					</a>
+				</div>
+
+				<!--Card content-->
+				<div class="card-body">
+
+					<!--Title-->
+					<h4 class="card-title">{% trans %}references.lya-name{% endtrans %}</h4>
+					<!--Text-->
+					<p class="card-text">{% trans %}references.lya-sumary{% endtrans %}</p>
+					<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+					<!--<button type="button" class="btn btn-primary btn-md">{% trans %}references.button-more{% endtrans %}</button>-->
+
+				</div>
+
+			</div>
+			<!-- Card -->
+
+			<!-- Card -->
+			<div class="card mb-4">
+
+				<!--Card image-->
+				<div class="view overlay">
+					<img class="card-img-top" src="/img/BIODIVERSA.png" alt="Card image cap">
+					<a href="#!">
+						<div class="mask rgba-white-slight"></div>
+					</a>
+				</div>
+
+				<!--Card content-->
+				<div class="card-body">
+
+					<!--Title-->
+					<h4 class="card-title">{% trans %}references.bio-name{% endtrans %}</h4>
+					<!--Text-->
+					<p class="card-text">{% trans %}references.bio-sumary{% endtrans %}</p>
+					<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+					<!--<button type="button" class="btn btn-primary btn-md">{% trans %}references.button-more{% endtrans %}</button>-->
+
+				</div>
+
+			</div>
+			<!-- Card -->
+
+			<!-- Card -->
+			<div class="card mb-4">
+
+				<!--Card image-->
+				<div class="view overlay">
+					<img class="card-img-top" src="/img/ALBEMARLE.png" alt="Card image cap">
+					<a href="#!">
+						<div class="mask rgba-white-slight"></div>
+					</a>
+				</div>
+
+				<!--Card content-->
+				<div class="card-body">
+
+					<!--Title-->
+					<h4 class="card-title">{% trans %}references.albe-name{% endtrans %}</h4>
+					<!--Text-->
+					<p class="card-text">{% trans %}references.albe-sumary{% endtrans %}</p>
+					<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+					<!--<button type="button" class="btn btn-primary btn-md">Mas</button>-->
+
+				</div>
+
+			</div>
+			<!-- Card -->
+
+		</div>
+		<!-- Card deck -->		
 	</div>
 </div>
 {% endblock %}
