--- a/templates/front/contact.html.twig
+++ b/templates/front/contact.html.twig
@@ -4,22 +4,40 @@
 <div class="container">
 	<div class="row">
 		<div class="col-12 col-md-6">
-			<form id="frmContacto" name="frmContacto" action="inc/procesa-cotizacion.php" method="post">
+			<form id="frmContacto" name="frmContacto" action="{{path('cotization')}}" method="post">
 				<fieldset>
+					{% for message in app.flashes('success') %}
+					<div class="alert alert-success">
+						{{ message }}
+					</div>
+					{% endfor %}
+					{% for message in app.flashes('error') %}
+					<div class="alert alert-danger">
+						{{ message }}
+					</div>
+					{% endfor %}
 					<div class="form-group">
 						<label>{% trans %}navbar.products{% endtrans %} / {% trans %}navbar.services{% endtrans %}:</label>
-						<select class="form-control" name="tipo" id="tipo">
+						<select class="form-control" name="type" id="type">
 							<option value="" selected="selected">-- {% trans %}select{% endtrans %} --</option>
-							<option value="Producto / Servicio-1">{% trans %}navbar.products{% endtrans %} / {% trans %}navbar.services{% endtrans %}-1</option>
-							<option value="Producto / Servicio-2">{% trans %}navbar.products{% endtrans %} / {% trans %}navbar.services{% endtrans %}-2</option>
-							<option value="Producto / Servicio-3">{% trans %}navbar.products{% endtrans %} / {% trans %}navbar.services{% endtrans %}-3</option>
-							<option value="Producto / Servicio-4">{% trans %}navbar.products{% endtrans %} / {% trans %}navbar.services{% endtrans %}-4</option>
-							<option value="Producto / Servicio-5">{% trans %}navbar.products{% endtrans %} / {% trans %}navbar.services{% endtrans %}-5</option>
+							<option value="{% trans %}services.ing-name{% endtrans %}">
+								{% trans %}services.ing-name{% endtrans %}
+							</option>
+							<option value="{% trans %}services.mont-name{% endtrans %}">
+								{% trans %}services.mont-name{% endtrans %}
+							</option>
+							<option value="{% trans %}services.op-name{% endtrans %}">
+								{% trans %}services.op-name{% endtrans %}
+							</option>
 						</select>
 					</div>
 					<div class="form-group">
 						<label>{% trans %}company{% endtrans %} :</label>
 						<input class="form-control" name="empresa" type="text" id="empresa">
+					</div>
+					<div class="form-group">
+						<label>{% trans %}turn-company{% endtrans %} :</label>
+						<input class="form-control" name="giro" type="text" id="giro">
 					</div>
 					<div class="form-group">
 						<label>{% trans %}contact-name{% endtrans %} :</label>
@@ -49,7 +67,7 @@
 					<div class="clear"></div>
 					<div class="clear"></div>
 					<div class="form-btn">
-						<input class="btn btn-primary" type="button" id="validar-cotizacion" name="button" value="Enviar">
+						<input class="btn btn-primary" type="submit" id="validar-cotizacion" name="button" value="Enviar">
 					</div>
 					<br>
 					<br>
@@ -57,7 +75,7 @@
 			</form>
 		</div>
 		<div class="col-md-6 d-none d-md-block" >
-			<h1>{% trans %}contact-sumary{% endtrans %}</h1>
+			<p>{% trans %}contact-sumary{% endtrans %}</p>
 		</div>
 	</div>
 </div>
