--- a/templates/front/products.html.twig
+++ b/templates/front/products.html.twig
@@ -5,87 +5,67 @@
 	<h2>{% trans %}navbar.products{% endtrans %} - {% trans %}navbar.services{% endtrans %}</h2>
 	<!-- Card deck -->
 	<div class="card-deck">
-
 		<!-- Card -->
 		<div class="card mb-4">
-
 			<!--Card image-->
 			<div class="view overlay">
-				<img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg" alt="Card image cap">
+				<img class="card-img-top" src="/img/INGIENERIA-DISEÑO.png" alt="Card image cap">
 				<a href="#!">
 					<div class="mask rgba-white-slight"></div>
 				</a>
 			</div>
-
 			<!--Card content-->
 			<div class="card-body">
-
 				<!--Title-->
-				<h4 class="card-title">Card title</h4>
+				<h4 class="card-title">{% trans %}services.ing-name{% endtrans %}</h4>
 				<!--Text-->
-				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				<p class="card-text">{% trans %}services.ing-sumary{% endtrans %}</p>
 				<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-				<button type="button" class="btn btn-light-blue btn-md">Read more</button>
-
+				<!--<button type="button" class="btn btn-light-blue btn-md">Read more</button>-->
 			</div>
-
 		</div>
 		<!-- Card -->
-
 		<!-- Card -->
 		<div class="card mb-4">
-
 			<!--Card image-->
 			<div class="view overlay">
-				<img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/14.jpg" alt="Card image cap">
+				<img class="card-img-top" src="/img/CONSTRUCION.png" alt="Card image cap">
 				<a href="#!">
 					<div class="mask rgba-white-slight"></div>
 				</a>
 			</div>
-
 			<!--Card content-->
 			<div class="card-body">
-
 				<!--Title-->
-				<h4 class="card-title">Card title</h4>
+				<h4 class="card-title">{% trans %}services.mont-name{% endtrans %}</h4>
 				<!--Text-->
-				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				<p class="card-text">{% trans %}services.mont-sumary{% endtrans %}</p>
 				<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-				<button type="button" class="btn btn-light-blue btn-md">Read more</button>
-
+				<!--						<button type="button" class="btn btn-light-blue btn-md">Read more</button>-->
 			</div>
-
 		</div>
 		<!-- Card -->
-
 		<!-- Card -->
 		<div class="card mb-4">
-
 			<!--Card image-->
 			<div class="view overlay">
-				<img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/15.jpg" alt="Card image cap">
+				<img class="card-img-top" src="/img/PUESTA EN MARCHA.png" alt="Card image cap">
 				<a href="#!">
 					<div class="mask rgba-white-slight"></div>
 				</a>
 			</div>
-
 			<!--Card content-->
 			<div class="card-body">
-
 				<!--Title-->
-				<h4 class="card-title">Card title</h4>
+				<h4 class="card-title">{% trans %}services.op-name{% endtrans %}</h4>
 				<!--Text-->
-				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				<p class="card-text">{% trans %}services.op-sumary{% endtrans %}</p>
 				<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-				<button type="button" class="btn btn-light-blue btn-md">Read more</button>
-
+				<!--<button type="button" class="btn btn-light-blue btn-md">Read more</button>-->
 			</div>
-
 		</div>
 		<!-- Card -->
-
 	</div>
-	<!-- Card deck -->
-
 </div>
 {% endblock %}
+
